dev/gitlab/ingress.yaml

# This ingress is needed as gitlab.sdp.equinor.com is a CNAME pointing to this address.
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-webservice-ingress
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: gitlab.dev.sdpaks.equinor.com
    http:
      paths:
      - backend:
          serviceName: gitlab-webservice
          servicePort: 8181
        path: /
      - backend:
          serviceName: gitlab-webservice
          servicePort: 8080
        path: /admin/sidekiq
  tls:
  - hosts:
    - gitlab.dev.sdpaks.equinor.com
    secretName: gitlab-webservice-tls
